--- a/custom_components/smartrf/services.yaml
+++ b/custom_components/smartrf/services.yaml
@@ -1,4 +1,4 @@
 check_updates:
-  description: Check for SmartIR updates.
+  description: Check for SmartRF updates.
 update_component:
-  description: Update SmartIR component.
+  description: Update SmartRF component.
