--- a/custom_components/broadlinkcover/manifest.json
+++ b/custom_components/broadlinkcover/manifest.json
@@ -1,9 +1,9 @@
 {
-  "domain": "smartir",
-  "name": "SmartIR",
-  "documentation": "https://github.com/smartHomeHub/SmartIR",
+  "domain": "broadlinkcover",
+  "name": "BroadlinkCover",
+  "documentation": "https://github.com/zoranke/BroadlinkCover",
   "dependencies": [],
-  "codeowners": ["@smartHomeHub"],
+  "codeowners": ["@zoranke"],
   "requirements": ["aiofiles==0.6.0"],
   "homeassistant": "0.115.0",
   "updater": {
@@ -12,6 +12,7 @@
     "files": [
       "__init__.py",
       "climate.py",
+      "cover.py",
       "media_player.py",
       "fan.py",
       "controller.py",
